--- a/Styles/home.css
+++ b/Styles/home.css
@@ -1,80 +1,64 @@
-.app-container{
-    height:10000px;
-  
-}
+
 /*** Navigation Bar ***/
-header{
-    display:flex;
-    justify-content: center;
-    padding-top:1.2em;
-    padding-bottom: 1.2em;
-}
 
   .nav-bar{
-      display: flex;
-      align-items: center;
-      height:39px;
-      margin-right: 32px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height:70px;
+    padding: 0 70px;
   }
 
     /* logo */
     .logo{
-       height: 38px;
-    }
-    .logo>img{
-         height: 100%;
-         object-fit: cover;
-
+       height: 32px;
+       display: block;
     }
 
     /* search Box  */
-    .search-box{
-         height:2.2em;
+    .search-container{
+        position: relative;
          display:flex;
+         width: 500px;
          align-items: center;   
-         padding:19px 15px;
-         margin-left: 5.7em;
+         padding:12px 15px;
          background-color: #F4F4F4;
          border-radius: 4px;
     }
 
-        .search-container{
-         display: flex;
-        }
 
             .menu-dropdown{
-                display:flex;
-               margin-right: 10px;
+                width: 55px;
+                font-size: 12px;
+                font-weight: 600;
             }
 
-                .menu-dropdown>span{
-                    font-size: 12px;
-                    font-weight: 600;
-                    margin-right: 5px;;      
-                }
-
             .search-bar{
+                
                 display: flex;
-                width: 28em;
+                width: 80%;
                 justify-content: space-between; 
                 border-left:0.4mm #5F5E5E solid;
                 padding-left: 10px;
             }
 
                .search-bar>input{
-                   display: inline;
-                   border: none;
-                   outline: none;
-                   background-color: #F4F4F4;   
+                    width: 100%;
+                    border: none;
+                    outline: none;
+                    background-color: #F4F4F4;   
+               }
+
+               .search-icon{
+                position: absolute;
+                right: 15px;
+                top: 13px;
                }
 
         /*nav bar Buttons*/
         .nav-buttons{  
         display: flex;
-        margin-left: 2.2em;
-        gap: 1em;
-        align-items: center;
-        height: 100%;
+        gap: 16px;
         }
 
         .nav-buttons > div{
@@ -87,27 +71,25 @@ header{
             .signin{
                 background-color: #F4F4F4;
                 color: black;
-                padding-left: 1.6em;
-                padding-right:1.6em;
-                padding-top: 0.8em;
-                padding-bottom: 0.8em;
+                padding: 12px 14px;
                 border-radius: 4px;
                 text-decoration: none;
-                font-weight: 600;
-                
+                border: none;
+                font-weight: 500;
             }
 
             .signup{
-                padding-left: 1.6em;
-                padding-right:1.6em;
-                padding-top: 0.8em;
-                padding-bottom: 0.8em;
+                padding: 12px 14px;
                 border-radius: 4px;
                 color: white;
                 font-weight:500;
                 background-color: #7264D5;
                 text-decoration: none;
+                border: none;
             }
+
+
+
 /*** langing page ***/
 .landing-page{
     height: 95vh;
@@ -701,9 +683,12 @@ font-size: 9.5px;
     width: 643px;
 }
 .latestnews-para > span{
-font-size: 33px;
-font-weight: 800;
-line-height: 18px;
+  
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 24px;
+    
+    
 }
 .latestnews-para > p{
    margin-top: 27px;
